[editor] fix(static-toolbar): pop tooltip out of overflow container HACK

--- a/packages/editor/src/Styles/rich-content-editor.scss
+++ b/packages/editor/src/Styles/rich-content-editor.scss
@@ -169,3 +169,7 @@
   padding: 2px 25px;
   white-space: pre-wrap;
 }
+
+.transformed {
+  transform: translate3d(0, 0, 0);
+}
