--- a/packages/editor/src/Styles/static-toolbar.scss
+++ b/packages/editor/src/Styles/static-toolbar.scss
@@ -18,8 +18,14 @@
   display: flex;
   align-items: center;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: visible;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: auto;
+
+  &::-webkit-scrollbar {
+      display: none;
+      width: 0 !important;
+  }
 }
 
 .buttons {
@@ -29,14 +35,6 @@
   padding: 0 9px;
   max-width: 100%;
   align-items: center;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
-  -webkit-overflow-scrolling: auto;
-
-  &::-webkit-scrollbar {
-      display: none;
-      width: 0 !important;
-  }
 }
 
 .responsiveSpacer {
